// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`result 1`] = `
<div>
  <h1>
    Hello, world!
  </h1>
  <h2>
    It is 
    8:00:00 AM
    .
  </h2>
</div>
`;

exports[`result 2`] = `
<div>
  <h1>
    Hello, world!
  </h1>
  <h2>
    It is 
    8:03:00 AM
    .
  </h2>
</div>
`;

exports[`result 3`] = `
<div>
  <h1>
    Hello, world!
  </h1>
  <h2>
    It is 
    8:03:00 AM
    .
  </h2>
</div>
`;

exports[`result 4`] = `
<div>
  <h1>
    Hello, world!
  </h1>
  <h2>
    It is 
    8:03:00 AM
    .
  </h2>
</div>
`;

exports[`test use act 1`] = `
<div>
  <h1>
    Hello, world!
  </h1>
  <h2>
    It is 
    8:05:00 AM
    .
  </h2>
</div>
`;

exports[`test use act 2`] = `
<div>
  <h1>
    Hello, world!
  </h1>
  <h2>
    It is 
    8:05:05 AM
    .
  </h2>
</div>
`;
